<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="ADD_FRIEND">/public/qr/pc/My_JiaHaoYou_QrBg.htm?user=%1$s</string>
    <string name="ALL_ORDER_URL">/app/orders/count.app</string>
    <string name="API_ACTIVATED_ACCOUNT">/app/user/get_profit_from_register.app</string>
    <string name="API_ADDR_CHECK">app/user/addr/ajax.app</string>
    <string name="API_ADD_ADDR">app/user/addr/add.app</string>
    <string name="API_ADD_FAVARITE">app/share/favorites/add.app</string>
    <string name="API_ADD_FRIEND">android/user/%1$s/friends/%2$s/add.android</string>
    <string name="API_ADD_GOODS">app/products/addpro/%1$s.app</string>
    <string name="API_ADD_GROUP">android/chat/group/add.android</string>
    <string name="API_ADD_GROUP_MEMBER">/android/chat/group/%1$s/join/%2$s.android</string>
    <string name="API_ADD_MENU">app/shopmenus/add.app</string>
    <string name="API_ADD_SPEC">app/usersys/spec/add_values.app</string>
    <string name="API_AGREE_REFUND">/share/agreeRefund</string>
    <string name="API_ALI_THREE_LOGIN">/public/alipay/get_auth_info_fromapp.htm</string>
    <string name="API_APPLY_REFUND">/share/applyRefund</string>
    <string name="API_APP_BASIC_PRODUCT">app/products/basic_pic_info/%1$s.app</string>
    <string name="API_APP_DELETE">app/products/deletepro/%1$s.app</string>
    <string name="API_APP_DOWN_UPLOAD">app/products/marketablepro/%1$s/%2$s.app</string>
    <string name="API_APP_PRODUCT">app/products/product_info/%1$s.app</string>
    <string name="API_APP_PRODUCT_EDIT">app/products/modifypro/%1$s.app</string>
    <string name="API_BLACK_FRIEND">android/user/%1$s/friends/%2$s/black.android</string>
    <string name="API_CHANGE_ADDR">app/user/addr/update.app</string>
    <string name="API_CHANGE_FUNDS">/share/changeFunds</string>
    <string name="API_CHECKVALID_CODE">/share/checkValidCode</string>
    <string name="API_CHECK_ADD_FRIEND">android/user/%1$s/check_add_roles/%2$s.android</string>
    <string name="API_CHECK_FRIEND">android/user/%1$s/check_friends/%2$s.android</string>
    <string name="API_CHECK_ONLINE">public/app/check_online.htm</string>
    <string name="API_CHECK_REGISTER">android/user/%1$s/check_isregister.android</string>
    <string name="API_CHECK_VERSION">/public/newAppVersion.htm?type=1</string>
    <string name="API_CHECK_YZM">/public/app/validate/code.htm</string>
    <string name="API_CIRCLES_COMMENT_FORWARD">/android/circles/ots/msg/%1$s/%2$s/%3$s.android</string>
    <string name="API_CIRCLES_MESSAGE">/android/circles/ots/msg/load/%1$s.android</string>
    <string name="API_CIRCLES_PUBLIC">/android/circles/ots/msg/publish.android</string>
    <string name="API_CIRCLES_READ">/android/circles/ots/msg/read/%1$s.android</string>
    <string name="API_CIRCLES_ZAN_SAVE">/android/circles/ots/msg/%1$s/%2$s.android</string>
    <string name="API_CIRCLE_DELETE">/android/circles/ots/msg/%1$s/%2$s.android</string>
    <string name="API_CLOSE_REWARD">/share/cancle</string>
    <string name="API_COMMENT_QUERY">/comment/queryComment</string>
    <string name="API_COMMENT_SELF">/comment/selfComment</string>
    <string name="API_COMPLETE_ORDER">/share/completeOrder</string>
    <string name="API_CONFIRM_ORDER">/share/confirmOrder</string>
    <string name="API_CUSTOM_SPEC">app/usersys/spec/add.app</string>
    <string name="API_DELETE_ADDR">app/user/addr/delete/%1$s.app</string>
    <string name="API_DELETE_FRIEND">android/user/%1$s/friends/%2$s/delete.android</string>
    <string name="API_DELETE_MENU">app/shopmenus/delete.app</string>
    <string name="API_DEL_GROUP">/android/chat/group/%1$s/delete.android</string>
    <string name="API_DEL_GROUP_MEMBER">/android/chat/group/%1$s/opt_%2$s/%3$s.android</string>
    <string name="API_DEMAND_DETAIL">/share/detail</string>
    <string name="API_DEMAND_HELP">http://wap.vjkeji.com/help/dph.html</string>
    <string name="API_DEMAND_HOMEPAGE">/share/homePage</string>
    <string name="API_DEMAND_IGNORESP">/share/ignoreSp</string>
    <string name="API_DEMAND_OFFER">/share/demandOffer</string>
    <string name="API_DEMAND_ORDER_SUBMIT">/share/submitOrder</string>
    <string name="API_DEMAND_PUBLISH">/share/publish</string>
    <string name="API_DEMAND_QUERY">/share/queryShare</string>
    <string name="API_DEMAND_TYPE_ICON">http://products.img.vjkeji.com/0004_icon/share/%1$s.png?x-oss-process=style/st-icon</string>
    <string name="API_EDIT_UPDATE">app/share/favorites/update.app</string>
    <string name="API_EXIT_GROUP">/android/chat/group/%1$s/sign_out/%2$s.android</string>
    <string name="API_FLAG_ANALYSIS_ERROR">返回数据解析错误，请重试</string>
    <string name="API_FLAG_DATA_ERROR">返回数据错误，请重试</string>
    <string name="API_FLAG_EXCEPTION_BROKEN">网络连接中断，请重试</string>
    <string name="API_FLAG_EXCEPTION_CON">网络繁忙，请稍后再试</string>
    <string name="API_FLAG_EXCEPTION_TIMEOUT">网络连接超时，请重试</string>
    <string name="API_FLAG_EXCEPTION_UNKNOWN_HOST">解析异常，请重试</string>
    <string name="API_FLAG_NET_FAIL">网络断开，请打开网络后重试</string>
    <string name="API_FLAG_NO_RESPONSE">没有数据返回，请重试</string>
    <string name="API_FLAG_SUCCESS_ERROR">数据处理错误</string>
    <string name="API_FRIENDS_LIST">android/user/%1$s/friends/items.android</string>
    <string name="API_FRIEND_REMARK">android/user/%1$s/friends/%2$s/modify_nickname.android</string>
    <string name="API_GAME_HTML">https://wap.vjkeji.com/manor/index.html</string>
    <string name="API_GAME_PACT">/mobile/help/game_protocol.html</string>
    <string name="API_GAME_POST">/gc/titan</string>
    <string name="API_GAME_QRCODE">/public/qr/m/game_qr.htm?user=%1$s</string>
    <string name="API_GET_EXCHANGE_USERINFO">/android/user/%1$s/exchange_userinfo.android</string>
    <string name="API_GET_FRIEND_INFO">android/user/%1$s/friends/%2$s/info.android</string>
    <string name="API_GET_FRIEND_INFO2">/app/%1$s/info/%2$s.app</string>
    <string name="API_GET_GROUP">android/chat/group/join/view.android</string>
    <string name="API_GET_GROUP_DETAIL">/android/chat/group/%1$s/details.android</string>
    <string name="API_GET_GROUP_INFO">/android/chat/group/%1$s/info.android</string>
    <string name="API_GET_GROUP_MEMBER">/android/chat/group/%1$s/friends/view.android</string>
    <string name="API_GET_GROUP_MEMBER9">/android/chat/group/icon/view/%1$s.android</string>
    <string name="API_GET_IMGROUP_INFO">/android/chat/group/%1$s/byimgroupid_info.android</string>
    <string name="API_GET_SPEC">app/usersys/spec/items.app</string>
    <string name="API_GET_USERINFO">/app/customer/check_info.app?userName=%1$s&amp;phone=%1$s</string>
    <string name="API_GOLD_BUY">/mobile/pay/buygold.html</string>
    <string name="API_GOODS_GUID">/app/usersys/spec/load_forgoods/%1$s.app</string>
    <string name="API_GOODS_SPEC_DELALL">app/products/deletepro_forgoods/%1$s.app</string>
    <string name="API_HOST">https://zc.vjkeji.com</string>
    <string name="API_HOST_F2F">https://vsf2f.vjkeji.com</string>
    <string name="API_HOST_GAME">https://gameapi.vjkeji.com</string>
    <string name="API_HOST_XDD">https://xddapi.vjkeji.com</string>
    <string name="API_IDENTIFY_COM">/certEnterprise/apply</string>
    <string name="API_LOAD_COMMENT">/android/circles/ots/msg/find_comment/%1$s.android</string>
    <string name="API_LOAD_SHOP_INFORMATION">app/usersys/seller/loadinfo.app</string>
    <string name="API_LOAD_VALUES">app/usersys/spec/load_values/</string>
    <string name="API_MULTIPLE_FIND">android/user/multiple.android</string>
    <string name="API_MYDEMAND_QUERY">/share/query</string>
    <string name="API_MYSELF_CIRCLES_MESSAGE">/android/circles/ots/msg/loadmyself.android</string>
    <string name="ID_card">身份证</string>
    <string name="QqBind">QQ绑定</string>
    <string name="account">账号</string>
    <string name="add_carriage">运费</string>
    <string name="age">年龄</string>
    <string name="aliBind">支付宝绑定</string>
    <string name="ali_bind">绑定支付宝账号</string>
    <string name="cancel">取消</string>
    <string name="category">类目</string>
    <string name="data_statistics_30days">30天内</string>
    <string name="data_statistics_7days">7天内</string>
    <string name="data_statistics_yesterday">昨日</string>
    <string name="demand_order_cancel_nav1">现在不需要了</string>
    <string name="demand_order_cancel_nav2">价格娇贵</string>
    <string name="demand_order_cancel_nav3">无法提供服务</string>
    <string name="demand_order_cancel_nav4">信息有误</string>
    <string name="demand_order_cancel_nav5">等待时间过长</string>
    <string name="demand_order_cancel_nav6">双方协商取消</string>
    <string name="digits_numeric">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="email">邮箱</string>
    <string name="ensure">确认</string>
    <string name="enter_carriage">请输入运费(元)，默认为0</string>
    <string name="enter_price">请输入商品价格(元)</string>
    <string name="enter_store">请输入库存数量(件):</string>
    <string name="enter_tip">请简要说明一下你的商品</string>
    <string name="enter_voucher">请输入可用抵用券额度(默认0:不可用)</string>
    <string name="for_sales_money">推广/销售让利 (商品价格*折扣比率)</string>
    <string name="goods_detail">商品详情</string>
    <string name="goods_name">商品名称</string>
    <string name="goods_pic">商品图片</string>
    <string name="goods_tip">商品说明描述</string>
    <string name="goods_type">商品分类</string>
    <string name="group_chat">群聊</string>
    <string name="head">头像</string>
    <string name="inviter">邀请人</string>
    <string name="login_invitation_code">邀请码</string>
    <string name="login_invitation_code_hint">输入邀请码</string>
    <string name="login_optional_code_hint">[选填]</string>
    <string name="me_invited">我邀请的人</string>
    <string name="new_friends">新的朋友</string>
    <string name="nick">昵称</string>
    <string name="nick_hint">请输入昵称</string>
    <string name="nickname">昵称</string>
    <string name="no_bind">未绑定</string>
    <string name="no_set">未设置</string>
    <string name="personal">个人简介</string>
    <string name="phone_num">手机号</string>
    <string name="please_byte_20">请输入20字符以内</string>
    <string name="post_shop">店铺子类目</string>
    <string name="price">价格</string>
    <string name="real_name">真实姓名</string>
    <string name="register_finish">完成注册</string>
    <string name="release">发布</string>
    <string name="select_shop">(按分类发布，方便用户查找)</string>
    <string name="service_center">客服中心</string>
    <string name="settings_help">帮助中心</string>
    <string name="sex">性别</string>
    <string name="stock">库存</string>
    <string name="tab_subscription">公众号</string>
    <string name="voucher">是否可用抵用券</string>
    <string name="wxBind">微信绑定</string>
</resources>