<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:paddingBottom="@dimen/margin_normal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_normal">
            <com.hy.frame.view.KeyValueView android:id="@+id/user_data_kvHead" android:layout_width="match_parent" android:layout_height="wrap_content" app:kvKey="@string/head" style="@style/settingsKvStyle"/>
            <com.hy.frame.view.RotundityImageView android:layout_gravity="right|center_vertical|center_horizontal|center" android:id="@+id/user_data_imgHead" android:layout_width="45dp" android:layout_height="45dp" android:layout_marginRight="30dp" android:src="@mipmap/def_head"/>
        </FrameLayout>
        <com.hy.frame.view.KeyValueView android:id="@+id/user_data_kvNickname" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="1px" app:kvKey="@string/nickname" app:kvValueHint="@string/no_set" app:kvValueRight="true" style="@style/settingsKvStyle"/>
        <com.hy.frame.view.KeyValueView android:id="@+id/user_data_kvUserName" android:clickable="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="1px" app:kvDrawRight="@null" app:kvKey="@string/account" app:kvValueHint="@string/no_set" app:kvValuePaddingRight="26dp" app:kvValueRight="true" style="@style/settingsKvStyle"/>
        <com.hy.frame.view.KeyValueView android:id="@+id/user_data_kvSex" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="1px" app:kvKey="@string/sex" app:kvValueHint="@string/no_set" app:kvValueRight="true" style="@style/settingsKvStyle"/>
        <com.hy.frame.view.KeyValueView android:id="@+id/user_data_kvAge" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="1px" app:kvKey="@string/age" app:kvValueHint="@string/no_set" app:kvValueRight="true" style="@style/settingsKvStyle"/>
        <com.hy.frame.view.KeyValueView android:id="@+id/user_data_kvEmail" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="1px" app:kvKey="@string/email" app:kvValueHint="@string/no_set" app:kvValueRight="true" style="@style/settingsKvStyle"/>
        <com.hy.frame.view.KeyValueView android:id="@+id/user_data_kvPersonal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="1px" app:kvKey="@string/personal" app:kvValueHint="@string/no_set" app:kvValueRight="true" style="@style/settingsKvStyle"/>
        <include layout="@layout/in_divider"/>
        <com.hy.frame.view.KeyValueView android:id="@+id/user_data_kvPhone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" app:kvKey="@string/phone_num" app:kvValueHint="@string/no_set" app:kvValueRight="true" style="@style/settingsKvStyle"/>
        <com.hy.frame.view.KeyValueView android:id="@+id/user_data_kvInviter" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="1px" app:kvKey="@string/inviter" app:kvKeyColor="@color/txt_red_finace" app:kvValueHint="@string/no_set" app:kvValueRight="true" style="@style/settingsKvStyle"/>
        <com.hy.frame.view.KeyValueView android:id="@+id/user_data_kvIdcard" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="1px" app:kvKey="@string/ID_card" app:kvValueHint="@string/no_set" app:kvValueRight="true" style="@style/settingsKvStyle"/>
        <com.hy.frame.view.KeyValueView android:id="@+id/user_data_kvRealname" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="1px" app:kvKey="@string/real_name" app:kvValueHint="@string/no_set" app:kvValueRight="true" style="@style/settingsKvStyle"/>
        <TextView android:textColor="@color/txt_red_finace" android:background="@color/white" android:padding="@dimen/margin_normal" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="绑定资金账户"/>
        <com.hy.frame.view.KeyValueView android:id="@+id/user_data_kvWxAccount" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="1px" app:kvDrawLeft="@drawable/icon_pay_wx" app:kvKey="@string/wxBind" app:kvValueHint="@string/no_bind" app:kvValueRight="true" style="@style/settingsKvStyle"/>
        <com.hy.frame.view.KeyValueView android:id="@+id/user_data_kvAliAccount" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="1px" app:kvDrawLeft="@drawable/icon_pay_ali" app:kvKey="@string/ali_bind" app:kvValueHint="@string/no_bind" app:kvValueRight="true" style="@style/settingsKvStyle"/>
        <TextView android:textColor="@color/txt_red_finace" android:background="@color/white" android:padding="@dimen/margin_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="绑定第三方登录"/>
        <com.hy.frame.view.KeyValueView android:id="@+id/user_data_kvWxThird" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="1px" app:kvDrawLeft="@drawable/icon_third_wx" app:kvKey="@string/wxBind" app:kvValueHint="@string/no_bind" app:kvValueRight="true" style="@style/settingsKvStyle"/>
        <com.hy.frame.view.KeyValueView android:id="@+id/user_data_kvAliThird" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="1px" app:kvDrawLeft="@drawable/icon_third_ali" app:kvKey="@string/aliBind" app:kvValueHint="@string/no_bind" app:kvValueRight="true" style="@style/settingsKvStyle"/>
        <com.hy.frame.view.KeyValueView android:id="@+id/user_data_kvQqThird" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="1px" app:kvDrawLeft="@drawable/icon_third_qq" app:kvKey="@string/QqBind" app:kvValueHint="@string/no_bind" app:kvValueRight="true" style="@style/settingsKvStyle"/>
    </LinearLayout>
</ScrollView>
