<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:layout_width="match_parent" android:layout_height="@dimen/kv_height" style="@style/publishGoodsTv">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/goods_pic"/>
            <TextView android:textColor="@color/txt_red_finace" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="(上传你的宝贝展示图，最多9张)"/>
        </LinearLayout>
        <FrameLayout android:background="@color/white" android:paddingLeft="@dimen/margin_normal" android:paddingRight="@dimen/margin_normal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.hy.frame.view.MyGridView android:id="@+id/gridView_publish_goods" android:background="@color/white" android:padding="@dimen/padding_normal" android:paddingTop="2dp" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="wrap_content" android:horizontalSpacing="3dp" android:verticalSpacing="3dp" android:numColumns="3"/>
        </FrameLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp">
            <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/kv_height" android:layout_marginTop="5dp">
                <TextView android:layout_width="100dp" android:layout_height="match_parent" android:text="@string/goods_type" style="@style/publishGoodsTv"/>
                <com.hy.frame.view.KeyValueView android:id="@+id/kv_select_goods_type" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent" app:kvKey="@string/category" style="@style/contentKvStyle"/>
            </LinearLayout>
            <TextView android:layout_width="match_parent" android:layout_height="@dimen/kv_height" android:layout_marginTop="1px" android:text="@string/goods_name" style="@style/publishGoodsTv"/>
            <EditText android:id="@+id/et_goods_name" android:background="@color/white" android:layout_width="match_parent" android:layout_height="@dimen/kv_height" android:layout_marginTop="1px" android:hint="@string/please_byte_20" android:maxLength="20" style="@style/publishGoodsEt"/>
            <TextView android:layout_width="match_parent" android:layout_height="@dimen/kv_height" android:layout_marginTop="5dp" android:text="@string/goods_tip" style="@style/publishGoodsTv"/>
            <EditText android:textColorHint="@color/gray_c" android:id="@+id/et_goods_desc" android:background="@color/gray_f" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/kv_height" android:hint="@string/enter_tip" android:minLines="2" android:maxLength="200" style="@style/publishGoodsEt"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp">
                <TextView android:layout_width="100dp" android:layout_height="@dimen/kv_height" android:text="@string/price" style="@style/publishGoodsTv"/>
                <EditText android:id="@+id/et_goods_price" android:background="@color/white" android:layout_width="match_parent" android:layout_height="@dimen/kv_height" android:hint="@string/enter_price" android:singleLine="true" android:inputType="numberDecimal" style="@style/publishGoodsEt"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/kv_height" android:layout_marginTop="1px">
                <TextView android:layout_width="100dp" android:layout_height="match_parent" android:text="@string/stock" style="@style/publishGoodsTv"/>
                <EditText android:id="@+id/et_store_num" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/enter_store" android:singleLine="true" android:maxLength="6" android:inputType="number" style="@style/publishGoodsEt"/>
            </LinearLayout>
            <com.hy.frame.view.KeyValueView android:id="@+id/kv_add_detail" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" app:kvKey="@string/goods_detail" style="@style/settingsKvStyle"/>
            <TextView android:layout_width="match_parent" android:layout_height="@dimen/kv_height" android:layout_marginTop="5dp" android:text="@string/for_sales_money" style="@style/publishGoodsTv"/>
            <LinearLayout android:orientation="horizontal" android:background="@color/white" android:layout_width="match_parent" android:layout_height="44dp" android:layout_marginTop="1px">
                <TextView android:textColor="@color/gray_b" android:gravity="center_vertical" android:paddingLeft="10dp" android:layout_width="0dp" android:layout_height="match_parent" android:text="销售让利(百分比%)" android:layout_weight="1"/>
                <Spinner android:entries="@array/for_sale_array" android:id="@+id/sp_for_sale" android:background="@color/white" android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/kv_height" android:layout_marginTop="5dp">
                <TextView android:layout_width="100dp" android:layout_height="match_parent" android:text="@string/add_carriage" style="@style/publishGoodsTv"/>
                <EditText android:id="@+id/et_carriage_publish" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/enter_carriage" android:singleLine="true" android:maxLength="3" android:inputType="numberDecimal" style="@style/publishGoodsEt"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="@dimen/kv_height" android:layout_marginTop="5dp">
                <TextView android:layout_width="100dp" android:layout_height="match_parent" android:text="@string/post_shop" style="@style/publishGoodsTv"/>
                <com.hy.frame.view.KeyValueView android:id="@+id/kv_post_shop" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent" app:kvKey="@string/select_shop" style="@style/contentKvStyle"/>
            </LinearLayout>
            <TextView android:layout_width="match_parent" android:layout_height="@dimen/kv_height" android:layout_marginTop="5dp" android:text="@string/voucher" style="@style/publishGoodsTv"/>
            <LinearLayout android:orientation="horizontal" android:background="@color/white" android:layout_width="match_parent" android:layout_height="@dimen/kv_height" android:layout_marginTop="1px">
                <EditText android:id="@+id/et_voucher" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent" android:hint="@string/enter_voucher" android:inputType="number" style="@style/publishGoodsEt"/>
            </LinearLayout>
            <View android:layout_width="match_parent" android:layout_height="5dp"/>
        </LinearLayout>
        <TextView android:textSize="@dimen/txt_big" android:textColor="@color/white" android:gravity="center" android:id="@+id/btn_publish_goods2" android:background="@drawable/btn_red_selector" android:layout_width="match_parent" android:layout_height="46dp" android:layout_marginLeft="15dp" android:layout_marginTop="50dp" android:layout_marginRight="15dp" android:layout_marginBottom="50dp" android:text="@string/release"/>
    </LinearLayout>
</ScrollView>
