<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:id="@+id/ll_parent" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.em.widget.ContactItemView android:id="@+id/item_application" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" app:contactItemImage="@drawable/icon_friend_head_notice" app:contactItemName="@string/new_friends"/>
        <com.em.widget.ContactItemView android:id="@+id/item_group" android:layout_width="match_parent" android:layout_height="wrap_content" app:contactItemImage="@drawable/icon_friend_head_group" app:contactItemName="@string/group_chat"/>
        <com.em.widget.ContactItemView android:id="@+id/item_subscription" android:layout_width="match_parent" android:layout_height="wrap_content" app:contactItemImage="@drawable/icon_friend_head_public" app:contactItemName="@string/tab_subscription"/>
        <com.em.widget.ContactItemView android:id="@+id/item_system" android:layout_width="match_parent" android:layout_height="wrap_content" app:contactItemImage="@drawable/icon_friend_head_system" app:contactItemName="@string/settings_help"/>
        <com.em.widget.ContactItemView android:id="@+id/item_feedback" android:layout_width="match_parent" android:layout_height="wrap_content" app:contactItemImage="@drawable/icon_friend_head_feedback" app:contactItemName="@string/service_center"/>
        <com.em.widget.ContactItemView android:id="@+id/item_invited" android:layout_width="match_parent" android:layout_height="wrap_content" app:contactItemImage="@drawable/icon_friend_head_inviter" app:contactItemName="@string/me_invited"/>
    </LinearLayout>
</LinearLayout>
