<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="horizontal" android:background="@color/dialog_bg" android:layout_width="match_parent" android:layout_height="40dp">
        <Button android:textSize="15sp" android:textColor="@color/demand_super" android:id="@+id/btn_cancel" android:background="@null" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/cancel" android:layout_weight="1"/>
        <Button android:textSize="15sp" android:textColor="@color/demand_super" android:id="@+id/btn_sure" android:background="@null" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/ensure" android:layout_weight="1"/>
    </LinearLayout>
    <com.hy.frame.view.NavGroup android:orientation="vertical" android:id="@+id/ng_close" android:paddingLeft="50dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.hy.frame.view.NavView android:id="@+id/nv_1" android:layout_width="match_parent" android:layout_height="wrap_content" app:navHorizontal="true" app:navChecked="true" app:navDrawRightWidth="20dp" app:navText="@string/demand_order_cancel_nav1" app:navDrawWidth="30dp" style="@style/navOrderStyleNoSe"/>
        <com.hy.frame.view.NavView android:id="@+id/nv_2" android:layout_width="match_parent" android:layout_height="wrap_content" app:navHorizontal="true" app:navChecked="false" app:navDrawRightWidth="20dp" app:navText="@string/demand_order_cancel_nav2" app:navDrawWidth="30dp" style="@style/navOrderStyleNoSe"/>
        <com.hy.frame.view.NavView android:id="@+id/nv_3" android:layout_width="match_parent" android:layout_height="wrap_content" app:navHorizontal="true" app:navChecked="false" app:navDrawRightWidth="20dp" app:navText="@string/demand_order_cancel_nav3" app:navDrawWidth="30dp" style="@style/navOrderStyleNoSe"/>
        <com.hy.frame.view.NavView android:id="@+id/nv_4" android:layout_width="match_parent" android:layout_height="wrap_content" app:navHorizontal="true" app:navChecked="false" app:navDrawRightWidth="20dp" app:navText="@string/demand_order_cancel_nav4" app:navDrawWidth="30dp" style="@style/navOrderStyleNoSe"/>
        <com.hy.frame.view.NavView android:id="@+id/nv_5" android:layout_width="match_parent" android:layout_height="wrap_content" app:navHorizontal="true" app:navChecked="false" app:navDrawRightWidth="20dp" app:navText="@string/demand_order_cancel_nav5" app:navDrawWidth="30dp" style="@style/navOrderStyleNoSe"/>
        <com.hy.frame.view.NavView android:id="@+id/nv_6" android:layout_width="match_parent" android:layout_height="wrap_content" app:navHorizontal="true" app:navChecked="false" app:navDrawRightWidth="20dp" app:navText="@string/demand_order_cancel_nav6" app:navDrawWidth="30dp" style="@style/navOrderStyleNoSe"/>
    </com.hy.frame.view.NavGroup>
</LinearLayout>
