<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@drawable/btn_white_selector" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="right" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/regist_imgClose" android:padding="@dimen/padding_normal" android:layout_width="36dp" android:layout_height="36dp" android:src="@mipmap/ico_close"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:id="@+id/regist_txtCountryCode" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/nick" android:layout_weight="1" style="@style/txtDefaultStyle"/>
        <EditText android:layout_gravity="center_vertical" android:id="@+id/regist_editNick" android:layout_width="0dp" android:layout_height="@dimen/edit_height" android:hint="@string/nick_hint" android:layout_weight="3" style="@style/editStyle"/>
        <TextView android:gravity="center_vertical" android:layout_width="0dp" android:layout_height="match_parent" android:hint="@string/login_optional_code_hint" android:layout_weight="1" style="@style/txtDefaultStyle"/>
    </LinearLayout>
    <include layout="@layout/in_divider"/>
    <LinearLayout android:id="@+id/lly_invite" android:background="@color/white" android:layout_width="match_parent" android:layout_height="@dimen/edit_height">
        <TextView android:gravity="center" android:id="@+id/txtDefaul2" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/login_invitation_code" android:layout_weight="1" style="@style/txtDefaultStyle"/>
        <EditText android:layout_gravity="center_vertical" android:id="@+id/regist_editCode" android:layout_width="0dp" android:layout_height="match_parent" android:hint="@string/login_invitation_code_hint" android:digits="@string/digits_numeric" android:layout_weight="3" style="@style/editStyle"/>
        <TextView android:gravity="center_vertical" android:layout_width="0dp" android:layout_height="match_parent" android:hint="@string/login_optional_code_hint" android:layout_weight="1" style="@style/txtDefaultStyle"/>
    </LinearLayout>
    <include layout="@layout/in_divider"/>
    <Button android:textColor="@color/white" android:id="@+id/regist_btnConfirm" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_normal" android:layout_marginTop="70dp" android:layout_marginRight="@dimen/margin_normal" android:layout_marginBottom="@dimen/margin_normal" android:text="@string/register_finish" style="@style/btnStyle"/>
</LinearLayout>
